fog: Switch to touchpanel dt2w node
Signed-off-by: alternoegraha <noegrahachan@gmail.com>

--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -135,8 +135,8 @@ on boot
     write /sys/module/cpu_boost/parameters/input_boost_ms 120
 
     # DT2W
-    chown system system /proc/tp_gesture
-    chmod 0664 /proc/tp_gesture
+    chown system system /sys/touchpanel/double_tap
+    chmod 0664 /sys/touchpanel/double_tap
 
     # USB controller configuration
     setprop vendor.usb.rndis.func.name "gsi"
