fog: init: Set restricted cpuset to the same CPUs as system-background
system-background should only include efficiency cores
and restricted should do the same in order to save
power while the screen is off. Copy system-background
CPUs instead of hardcoding to account for platforms
with varying numbers of efficiency cores.

Change-Id: I3a46190a2fa76eb1e9061a605c6a2e74006975de

Signed-off-by: Reimu <192520540+Keera00@users.noreply.github.com>

--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -790,6 +790,11 @@ service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
     socket audio_hw_socket seqpacket 0666 system system
     onrestart restart audioserver
 
+on property:vendor.post_boot.parsed=1
+# Set restricted cpuset to the same CPUs as system-background
+    copy /dev/cpuset/system-background/cpus /dev/cpuset/restricted/cpus
+
+
 on property:ro.boot.hwversion=*
     setprop vendor.boot.hwversion ${ro.boot.hwversion}
 
