--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -176,8 +176,8 @@ on property:sys.boot_completed=1
     # Stop statsd
     stop statsd
 
-    # Enable suspend to RAM
-    write /sys/power/mem_sleep "deep"
+    # Read only one page at a time
+    write /proc/sys/vm/page-cluster 0
 
     # Mount swap partitions specified in fstab
     swapon_all /vendor/etc/fstab.zram
