--- a/init/init.qcom.power.rc
+++ b/init/init.qcom.power.rc
@@ -92,6 +92,14 @@ on init
     # Disable UFS powersaving
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkgate_enable 0
 
+    # We only have system and background groups holding tasks and the groups below are empty
+    write /dev/cpuctl/camera-daemon/cpu.shares 20480
+    write /dev/cpuctl/foreground/cpu.shares 20480
+    write /dev/cpuctl/nnapi-hal/cpu.shares 20480
+    write /dev/cpuctl/rt/cpu.shares 20480
+    write /dev/cpuctl/system-background/cpu.shares 20480
+    write /dev/cpuctl/top-app/cpu.shares 20480
+
     # Disable powersaving
     write /sys/module/lpm_levels/parameters/sleep_disabled 1
 
@@ -116,3 +124,9 @@ on init
     write /sys/module/lpm_levels/system/perf/perf-l2-gdhs/idle_enabled N
     write /sys/module/lpm_levels/system/pwr/pwr-l2-gdhs/suspend_enabled N
     write /sys/module/lpm_levels/system/perf/perf-l2-gdhs/suspend_enabled N
+
+# Setup cpu.shares to throttle background groups (bg ~ 5% sysbg ~ 5% dex2oat ~2.5%)
+    write /dev/cpuctl/background/cpu.shares 1024
+    write /dev/cpuctl/system-background/cpu.shares 1024
+    write /dev/cpuctl/dex2oat/cpu.shares 512
+    write /dev/cpuctl/system/cpu.shares 20480
